delete the disabled extractFd test, move the do-not-restore-the-flags note into extractFd javadoc